Bug 692176 - Regression: Error: Font Renderer Plugin ( FreeType ) return code = 1
Summary: Regression: Error: Font Renderer Plugin ( FreeType ) return code = 1
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Text (show other bugs)
Version: master
Hardware: PC All
: P1 normal
Assignee: Chris Liddell (chrisl)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-02 09:12 UTC by Marcos H. Woehrmann
Modified: 2011-11-25 04:47 UTC (History)
0 users

See Also:
Customer: 170
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2011-05-02 09:12:31 UTC
The customer reports and I've verified that Ghostscript 9.01 cannot render the attached file, generating this error:

GPL Ghostscript SVN RELEASE CANDIDATE 9.01: Error: Font Renderer Plugin ( FreeType ) return code = 1
Error: /invalidfont in --run--
Operand stack:
   --dict:8/17(L)--   --dict:17/17(ro)(L)--   65
Execution stack:
   %interp_exit   .runexec2   --nostringval--   --nostringval--   --nostringval--   2   %stopped_push   --nostringval--   --nostringval--   --nostringval--   false   1   %stopped_push   1910   1   3   %oparray_pop   1909   1   3   %opa
rray_pop   1893   1   3   %oparray_pop   --nostringval--   --nostringval--   2   1   1   --nostringval--   %for_pos_int_continue   --nostringval--   --nostringval--   --nostringval--   --nostringval--   %array_continue   --nostringval-
-   false   1   %stopped_push   --nostringval--   %loop_continue   --nostringval--   %finish_show   --nostringval--   --nostringval--   8   9   1   --nostringval--   (gs_show_enum)   %op_show_continue
Dictionary stack:
   --dict:1158/1684(ro)(G)--   --dict:1/20(G)--   --dict:82/200(L)--   --dict:82/200(L)--   --dict:108/127(ro)(G)--   --dict:295/300(ro)(G)--   --dict:23/30(L)--   --dict:6/8(L)--   --dict:26/40(L)--
Current allocation mode is local
Last OS error: 2
GPL Ghostscript SVN RELEASE CANDIDATE 9.01: Unrecoverable error, exit code 1

Ghostscript 9.00 renders the file correctly.

It appears this broke in 2531711e1686a48a0af0432257bf74de36f395f4:

Author: Chris Liddell <chris.liddell@artifex.com>
Date:   Wed Feb 2 14:12:15 2011 +0000

    A set of changes to make it easier to use the UFST with Ghostscript
    and to get us closer to having the option of the UFST handling font
    types other than the Microtype fonts.

I'm not sure this makes much sense, since the command the customer and I are using to test with doesn't the UFST font scalar.

The command line I'm using for testing:

  bin/gs -sDEVICE=ppmraw -o test.ppm ./ENUtxt.pdf